Test/debug.txt
test.cpp:41:18: error: no matching constructor for initialization of 'struct TreeNode'
        struct TreeNode n4{4, &n6, &n7};
                        ^
test.cpp:10:2: note: candidate constructor not viable: requires single argument 'x', but no arguments were provided
        TreeNode(int x) : val(x), left(NULL), right(NULL) {}
        ^
test.cpp:6:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
struct TreeNode {
       ^
test.cpp:41:20: error: expected ';' at end of declaration
        struct TreeNode n4{4, &n6, &n7};
                          ^
                          ;
test.cpp:43:18: error: no matching constructor for initialization of 'struct TreeNode'
        struct TreeNode n1{1,&n3, &n4};
                        ^
test.cpp:10:2: note: candidate constructor not viable: requires single argument 'x', but no arguments were provided
        TreeNode(int x) : val(x), left(NULL), right(NULL) {}
        ^
test.cpp:6:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
struct TreeNode {
       ^
test.cpp:43:20: error: expected ';' at end of declaration
        struct TreeNode n1{1,&n3, &n4};
                          ^
                          ;
test.cpp:44:18: error: no matching constructor for initialization of 'struct TreeNode'
        struct TreeNode n2{2, NULL, &n5};
                        ^
test.cpp:10:2: note: candidate constructor not viable: requires single argument 'x', but no arguments were provided
        TreeNode(int x) : val(x), left(NULL), right(NULL) {}
        ^
test.cpp:6:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
struct TreeNode {
       ^
test.cpp:44:20: error: expected ';' at end of declaration
        struct TreeNode n2{2, NULL, &n5};
                          ^
                          ;
test.cpp:45:18: error: no matching constructor for initialization of 'struct TreeNode'
        struct TreeNode n0{0, &n1, &n2};
                        ^
test.cpp:10:2: note: candidate constructor not viable: requires single argument 'x', but no arguments were provided
        TreeNode(int x) : val(x), left(NULL), right(NULL) {}
        ^
test.cpp:6:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
struct TreeNode {
       ^
test.cpp:45:20: error: expected ';' at end of declaration
        struct TreeNode n0{0, &n1, &n2};
                          ^
                          ;
test.cpp:54:29: error: member reference type 'TreeNode *' is a pointer; maybe you meant to use '->'?
        cout<<q.front().first->left.val<<'\t'<<q.front().second<<endl;
              ~~~~~~~~~~~~~~~~~~~~~^
                                   ->
test.cpp:55:29: error: member reference type 'TreeNode *' is a pointer; maybe you meant to use '->'?
        cout<<q.back().first->right.val<<'\t'<<q.front().second<<endl;
              ~~~~~~~~~~~~~~~~~~~~~^
                                   ->
10 errors generated.
